# job-search-mas

./: Dockerfile  README.md  __init__.py  config.py  create_env.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_example.py
agents/: analytics_agent.py  base_agent.py  market_intelligence_agent.py  orchestrator.py  personalization_agent.py  strategy_agent.py
api/: guardrails.py  main.py
memory/: __init__.py  redis_memory.py  vector_memory.py
models/: database.py  schemas.py
screenshots_demo/: Письмо_Made of Storm_3.txt  Письмо_Соцков Роман Юрьевич_2.txt  Письмо_Т-Банк_1.txt  Резюме_Made of Storm_3.txt  Резюме_Соцков Роман Юрьевич_2.txt  Резюме_Т-Банк_1.txt
scripts/: init_db.py
telegram_bot/: __init__.py  bot.py
tools/: __init__.py  base_tool.py  content_generator.py  job_search_api.py  resume_parser.py  tool_router.py
